<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkPage"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView_Title_Work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_Title_Work"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView_User_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="visible">

    </TextView>

    <ImageView
        android:id="@+id/textView_Preview"
        android:layout_width="196dp"
        android:layout_height="226dp"
        android:layout_gravity="center"
        android:contentDescription="@string/imageView_CameraView_Description">

    </ImageView>

    <Button
        android:id="@+id/button_TakePicture"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_TakePicture"
        android:layout_gravity="center">

    </Button>

    <Button
        android:id="@+id/button_Analyze"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_Analyze"
        android:layout_gravity="center"/>

</LinearLayout>